--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "formik": "^1.5.8",
     "history": "^4.9.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
+    "react-formik-ui": "^3.0.20",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
